[gd_scene load_steps=3 format=2]

[ext_resource path="res://stuff/card_socket.tscn" type="PackedScene" id=1]
[ext_resource path="res://stuff/choice/choice.gd" type="Script" id=2]

[node name="Choice" type="ColorRect"]
margin_right = 180.0
margin_bottom = 154.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 6
color = Color( 0.266667, 0.219608, 0.705882, 1 )
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_right = 115.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Select"

[node name="CardSocket" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 90, 130 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="unlock" from="CardSocket" to="." method="_on_CardSocket_unlock"]
